objects/ABC_Full_Object__c.object
<CustomObject>
    <fields>
        <fullName>AA1__c</fullName>
        <label>AA1</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA2__c</fullName>
        <label>AA2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codescan__c</fullName>
        <label>Codescan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_category__c</fullName>
        <label>Task category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ABC Full Object</label>
    <nameField>
        <label>ABC Full Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AVBC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>